--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "pc-nrfconnect-matter-manufacturer-cluster-editor",
+    "name": "pc-nrfconnect-matter-cluster-editor",
     "version": "0.1.0",
-    "description": "An application for creating and modifying Matter Manufacturer-specific Clusters and Cluster Extensions.",
-    "displayName": "nRF Connect Matter Manufacturer Cluster Editor",
+    "description": "Tool for creating and editing manufacturer-specific clusters and data model extensions in Matter",
+    "displayName": "Matter Cluster Editor",
     "author": "Nordic Semiconductor ASA",
     "license": "SEE LICENSE IN LICENSE",
-    "homepage": "https://github.com/NordicSemiconductor/pc-nrfconnect-matter-manufacturer-cluster-editor",
+    "homepage": "https://github.com/NordicSemiconductor/pc-nrfconnect-matter-cluster-editor",
     "repository": {
         "type": "git",
-        "url": "https://github.com/NordicSemiconductor/pc-nrfconnect-matter-manufacturer-cluster-editor.git"
+        "url": "https://github.com/NordicSemiconductor/pc-nrfconnect-matter-cluster-editor.git"
     },
     "engines": {
         "nrfconnect": ">=4.3.0"
