Add latest to the release workflow
Signed-off-by: Arkadiusz Balys <arkadiusz.balys@nordicsemi.no>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
                 description: 'Source to release to'
                 type: choice
                 options:
+                    - latest (internal)
                     - release-test (internal)
                     - test (internal)
                     - official (external)
