--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
     release:
-        uses: NordicSemiconductor/pc-nrfconnect-shared/.github/workflows/release-app.yml@main
+        uses: NordicSemiconductor/pc-nrfconnect-shared/.github/workflows/release-app.yml@v215
         with:
             source: latest (internal)
         secrets: inherit
