--- a/doc/zoomin/custom.properties
+++ b/doc/zoomin/custom.properties
@@ -1,3 +1,3 @@
 manual.name=nrf-connect-matter-cluster-editor
-booktitle=Matter Manufacturer Cluster Editor app
-shortdesc=Documentation for the Matter Manufacturer Cluster Editor application.
+booktitle=Matter Cluster Editor app
+shortdesc=Documentation for the Matter Cluster Editor application.
