--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
         "build:dev": "run-esbuild",
         "build:prod": "run-esbuild --prod",
         "test": "jest --passWithNoTests",
+        "fix": "eslint --fix .",
         "check": "run-p --silent --continue-on-error --print-label check:*",
         "check:app": "check-app-properties",
-        "check:lint": "eslint --fix --color .",
+        "check:lint": "eslint --color .",
         "check:types": "check-for-typescript tsc --noEmit --pretty",
         "check:license": "nrfconnect-license check",
         "nordic-publish": "node ./dist/nordic-publish.js",
