--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -1,66 +1,53 @@
 site_name: Matter Cluster Editor app documentation
-site_url:
+site_url: null
 use_directory_urls: false
-
 theme:
   name: material
   palette:
-    - scheme: custom-blue
-      toggle:
-        icon: material/lightbulb-outline
-        name: Switch to dark mode
-    - scheme: custom-blue-dark
-      toggle:
-        icon: material/lightbulb
-        name: Switch to light mode
-  # logo: assets/logo.png
-  # favicon: assets/logo.png
+  - scheme: custom-blue
+    toggle:
+      icon: material/lightbulb-outline
+      name: Switch to dark mode
+  - scheme: custom-blue-dark
+    toggle:
+      icon: material/lightbulb
+      name: Switch to light mode
   features:
-    - content.code.annotate
-    - content.tooltips
-    - content.tabs.link
-    - navigation.indexes
-    - navigation.top
-    - navigation.tracking
-    - search.highlight
-    - toc.follow
-
-
+  - content.code.annotate
+  - content.tooltips
+  - content.tabs.link
+  - navigation.indexes
+  - navigation.top
+  - navigation.tracking
+  - search.highlight
+  - toc.follow
 extra_css:
-  - stylesheets/style.css
-
-copyright:
-  Copyright &copy; 2023-2024
-
+- stylesheets/style.css
+copyright: Copyright &copy; 2023-2024
 markdown_extensions:
-  - abbr
-  - admonition
-  - attr_list
-  - md_in_html
-  - meta
-  - pymdownx.details
-  - pymdownx.keys
-  - pymdownx.tabbed
-  - pymdownx.superfences
-  - toc:
-      permalink: true
-      toc_depth: 4
-
+- abbr
+- admonition
+- attr_list
+- md_in_html
+- meta
+- pymdownx.details
+- pymdownx.keys
+- pymdownx.tabbed
+- pymdownx.superfences
+- toc:
+    permalink: true
+    toc_depth: 4
 plugins:
-  - macros
-  - search
-
-
+- macros
+- search
 extra:
   test: This is a test abbreviation snippet
   NCS: nRF Connect SDK
   matter_requirements: To take full advantage of this guide, you need to be familiar with the [Matter architecture](https://docs.nordicsemi.com/bundle/ncs-latest/page/nrf/protocols/matter/overview/architecture.html) and the [Matter Device Type Library specification](https://docs.nordicsemi.com/bundle/ncs-latest/page/nrf/protocols/matter/overview/data_model.html).
-
 nav:
-  - Home: index.md
-  - Installing the Matter Cluster Editor app: installing.md
-  - Overview and user interface: overview.md
-  - Creating a new Matter cluster: creating_new_cluster.md
-  - Creating a cluster extension: creating_cluster_extension.md
-  - Creating a new device type: creating_device_type.md
-  - Revision history: revision_history.md
+- Get started: index.md
+- Overview and user interface: overview.md
+- Creating a new Matter cluster: creating_new_cluster.md
+- Creating a cluster extension: creating_cluster_extension.md
+- Creating a new device type: creating_device_type.md
+- Revision history: revision_history.md
